[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polybtc"
version = "0.1.0"
description = "Polymarket 5 minute BTC paper trading research tool"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.0",
  "httpx>=0.27",
  "websockets>=12.0",
  "PyYAML>=6.0",
  "orjson>=3.9",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
polybtc = "polybtc.cli:app"

[tool.setuptools.packages.find]
include = ["polybtc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
